--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,2 +1,30 @@
-<h1>Admin::Genres#index</h1>
-<p>Find me in app/views/admin/genres/index.html.erb</p>
+<body>
+  <h1>ジャンル一覧・追加</h1>
+   <%= form_with model: @genre do |f| %>
+    <h4>ジャンル名</h4>
+    <%= f.text_field :name %>
+    <%= f.submit '新規投稿' %>
+   <% end %>
+
+  <table>
+   <thead>
+    <tr>
+     <th>ジャンル</th>
+     <th></th>
+     <th colspan="2"></th>
+    </tr>
+   </thead>
+  
+   <tbody>
+    <% @genres.each do |genre| %>
+    <tr>
+     <td>
+      <%= genre.name %>
+     </td>
+     <td></td>
+    </tr>
+    <% end %>
+   </tbody>
+  </table>
+
+</body>
