--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>Admin::Genres#edit</h1>
-<p>Find me in app/views/admin/genres/edit.html.erb</p>
+<body>
+  <h1>ジャンル編集</h1>
+  
+  <h4>ジャンル名</h4>
+  <%= form_with model: @genre do |f| %>
+  <%= f.submit '変更を保存' %>
+  <% end %>
+
+</body>
