--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,7 +1,7 @@
 <body>
   <h1>商品新規登録</h1>
-
-  <%= form_with model: @item do |f| %>
+  <%= form_with model: @item, url: admin_items_path do |f| %>
+  
     <h4>商品画像</h4>
       <%= f.file_field :image,accept:"image/*" %>
     <h4>商品名</h4>
@@ -9,7 +9,7 @@
     <h4>商品説明</h4>
       <%= f.text_field :introduction %>
     <h4>ジャンル</h4>
-    
+      <%= f.collection_select :genre_id, Genre.all, :id, :name %>
     <h4>税抜価格</h4>
       <%= f.text_field :price %>
     <h4>販売ステータス</h4>
