--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,16 @@
-<h1>Admin::Items#show</h1>
-<p>Find me in app/views/admin/items/show.html.erb</p>
+<body>
+  <h1>商品詳細</h1>
+    <% if @item.image.attached? %>
+    <%= image_tag @item.image, size: "200x200" %>
+    <% else %>
+    <%= image_tag 'no_image', size: "200x200" %>
+    <% end %>
+
+    <p>商品名:<%= @item.name %></p>
+    <p>商品説明:<%= @item.introduction %></p>
+    <p>ジャンル:<%= @item.genre_id %></p>
+    <p>税込価格:<%= @item.price %></p>
+    <p>販売ステータス:<%= @item.is_active %></p>
+
+  <%= link_to "編集する" ,edit_admin_item_path(@item.id) %>
+</body>
