--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,26 +1,93 @@
-<body>
-  <h1><%= @customer.last_name %> <%= @customer.first_name %>さんの会員情報編集</h1>
-  <%= form_with model: @customer, url: admin_customer_path(@customer.id), method: :patch do |f| %>
-  
-    <h4>会員ID</h4>
-      <%= f.text_field :id%>
-    <h4>氏名</h4>
-      <%= f.text_field :last_name %> <%= f.text_field :first_name %>
-    <h4>フリガナ</h4>
-      <%= f.text_field :last_name_kana %> <%= f.text_field :first_name_kana %>
-    <h4>郵便番号</h4>
-      <%= f.text_field :postal_code %>
-    <h4>住所</h4>
-      <%= f.text_field :address %>
-    <h4>電話番号</h4>
-      <%= f.text_field :telephone_number %>
-    <h4>メールアドレス</h4>
-      <%= f.text_field :email %>
-    <h4>会員ステータス</h4>
-      <%= f.label :is_active, '有効',value: 1 %>
-      <%= f.radio_button :is_active, '有効',value: '1' %>
-      <%= f.label :is_active, '退会',value: 0 %>
-      <%= f.radio_button :is_active, '退会',value: '0' %>     
-    <%= f.submit '変更を保存' %>
-  <% end %>
-</body>
+<div class="container mx-auto" style="width: 1200px; height: 600px;">
+  <h4 class="form-group row bg-light" style="width: 350px"><%= @customer.last_name %> <%= @customer.first_name %>さんの会員情報編集</h4>
+    <%= form_with model: @customer, url: admin_customer_path(@customer.id), method: :patch do |f| %>
+      <div class="row mb-3">
+        <div class="col-2">
+        会員ID
+        </div>
+        <div class="col-5">
+        <%= @customer.id %>
+        </div>
+      </div>
+
+      <div class="row mb-3">
+        <div class="col-2">
+        氏名
+        </div>
+        <div class="col-3">
+      　<%= f.text_field :last_name %>
+        </div>
+        <div class="col-3">
+      　<%= f.text_field :first_name %>
+        </div>
+      </div>
+
+      <div class="row mb-3">
+        <div class="col-2">
+        フリガナ
+        </div>
+        <div class="col-3">
+      　<%= f.text_field :last_name_kana %>
+        </div>
+        <div class="col-3">
+      　<%= f.text_field :first_name_kana %>
+        </div>
+      </div>
+
+      <div class="row mb-3">
+        <div class="col-2">
+        郵便番号
+        </div>
+        <div class="col-5">
+        <%= f.text_field :postal_code %>
+        </div>
+      </div>
+
+      <div class="row mb-3">
+        <div class="col-2">
+        住所
+        </div>
+        <div class="col-5">
+        <%= f.text_field :address %>
+        </div>
+      </div>
+
+      <div class="row mb-3">
+        <div class="col-2">
+        電話番号
+        </div>
+        <div class="col-5">
+        <%= f.text_field :telephone_number %>
+        </div>
+      </div>
+
+      <div class="row mb-3">
+        <div class="col-2">
+        メールアドレス
+        </div>
+        <div class="col-5">
+        <%= f.text_field :email %>
+        </div>
+      </div>
+
+        <div class="row mb-3">
+          <div class="col-2">
+          会員ステータス
+          </div>
+          <div class="col-lg-8 col-form-label">
+          <%= f.label :is_active, '有効',value: 1 %>
+          <%= f.radio_button :is_active, 'true',value: 'true' %>
+          <%= f.label :is_active, '退会',value: 0 %>
+          <%= f.radio_button :is_active, 'flase',value: 'false' %>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-7 mx-auto" style="width: 900px">
+          <%= f.submit "変更を保存",class:"btn btn-success" %>
+          </div>
+        </div>
+      <% end %>
+    </form>
+  </div>
+</div>
