--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,24 +1,37 @@
-<body>
-  <h1>会員一覧</h1>
-    <table>
-        <thead>
-          <tr>
-            <th>会員ID</th>
-            <th>氏名</th>
-            <th>メールアドレス</th>
-            <th>ステータス</th>
-            <th colspan="4"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @customers.each do |customer| %>
-          <tr>
-            <td><%= customer.id %></td>
-            <td><%= customer.last_name %> <%= customer.first_name %></td>
-            <td><%= customer.email %></td>
-            <td><%= customer.is_active %></td>
-            </tr>
+<div class="container mx-auto" style="width: 1500px; height: 1500px;">
+  <h4 class="form-group row bg-light" style="width: 100px">会員一覧</h4>
+    <table class="table">
+      <thead>
+        <tr class="table-light">
+          <th scope="col">会員ID</th>
+          <th scope="col">氏名</th>
+          <th scope="col">メールアドレス</th>
+          <th scope="col">ステータス</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @customers.each do |customer| %>
+        <tr>
+          <td><%= customer.id %></td>
+          <td>
+          <%= link_to admin_customer_path(customer.id) do %>
+          <%= customer.last_name %> <%= customer.first_name %>
           <% end %>
+          </td>
+　        <td><%= customer.email %></td>
+          <td>
+          <% if customer.is_deleted == true %>
+          <div class="false">
+          退会
+          </div>
+          <% else %>
+          <div class="false">
+          退会
+          </div>
+          <% end %></td>
+        </tr>
+        <% end %>
       </tbody>
     </table>
-</body>
+    <%= paginate @customers %>
+</div>
