--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,15 +1,93 @@
-<body>
-  <h1><%= @customer.last_name %> <%= @customer.first_name %>さんの会員詳細</h1>
-    
-    <p>会員ID:<%= @customer.id %></p>
-    <p>氏名:<%= @customer.last_name %> <%= @customer.first_name %></p>
-    <p>フリガナ:<%= @customer.last_name_kana %> <%= @customer.first_name_kana %></p>
-    <p>郵便番号:<%= @customer.postal_code %></p>
-    <p>住所:<%= @customer.address %></p>
-    <p>電話番号:<%= @customer.telephone_number %></p>
-    <p>メールアドレス:<%= @customer.address %></p>
-    <p>会員ステータス:<%= @customer.is_active %></p>
-    
-  <%= link_to "編集する" ,edit_admin_customer_path(@customer.id) %>
-    
-</body>
+<div class="container mx-auto" style="width: 900px; height: 600px;">
+  <h4 class="form-group row bg-light" style="width: 300px"><%= @customer.last_name %> <%= @customer.first_name %>さんの会員詳細</h4>
+
+        <div class="row mb-3">
+          <div class="col-3">
+          会員ID
+          </div>
+          <div class="col-5">
+          <%= @customer.id %>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-3">
+          氏名
+          </div>
+          <div class="col-5">
+          <%= @customer.last_name %> <%= @customer.first_name %>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-3">
+          フリガナ
+          </div>
+          <div class="col-5">
+          <%= @customer.last_name_kana %> <%= @customer.first_name_kana %>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-3">
+          郵便番号
+          </div>
+          <div class="col-5">
+          <%= @customer.postal_code %>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-3">
+          住所
+          </div>
+          <div class="col-5">
+          <%= @customer.address %>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-3">
+          電話番号
+          </div>
+          <div class="col-5">
+          <%= @customer.telephone_number %>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-3">
+          メールアドレス
+          </div>
+          <div class="col-5">
+          <%= @customer.address %>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-3">
+          会員ステータス
+          </div>
+          <div class="col-5">
+          <% if @customer.is_deleted == true %>
+          <div class="false">
+          退会
+          </div>
+          <% else %>
+          <div class="true">
+          有効
+          </div>
+          <% end %>
+          </div>
+        </div>
+
+        <div class="row ml-5 mb-3">
+          <div class="col-2">
+          <%= link_to "編集する" ,edit_admin_customer_path(@customer.id),class:"btn btn-success" %>
+          </div>
+          <div class="col-5">
+          <%= link_to "注文履歴一覧を見る" ,admin_items_path,class:"btn btn-primary" %>
+          </div>
+        </div>
+
+</div>
