--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,9 +1,18 @@
-<body>
-  <h1>ジャンル編集</h1>
+<div class="container mx-auto" style="width: 900px; height: 600px;">
+  <h4 class="form-group row bg-light" style="width: 150px">ジャンル編集</h4>
   <%= form_with model: @genre, url: admin_genre_path(@genre.id), method: :patch do |f| %>
-  <h4>ジャンル名</h4>
-  <%= f.text_field :name %>
-  <%= f.submit '変更を保存' %>
-  <% end %>
 
-</body>
+      <div class="form-group row">
+        <div class="col-2">
+        ジャンル名
+        </div>
+        <div class="col-3">
+        <%= f.text_field :name %>
+      　</div>
+        <div class="col-3">
+        <%= f.submit '変更を保存',class:"btn btn-success" %>
+        </div>
+      </div>
+    <% end %>
+
+</div>
