--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,30 +1,33 @@
-<body>
-  <h1>ジャンル一覧・追加</h1>
-   <%= form_with model: @genre, url: admin_genres_path do |f| %>
-    <h4>ジャンル名</h4>
-    <%= f.text_field :name %>
-    <%= f.submit '新規投稿' %>
-   <% end %>
-
-  <table>
-   <thead>
-    <tr>
-     <th>ジャンル</th>
-     <th></th>
-     <th colspan="2"></th>
-    </tr>
-   </thead>
-
-   <tbody>
-    <% @genres.each do |genre| %>
-    <tr>
-     <td>
-      <%= genre.name %>
-     </td>
-     <td><%= link_to "編集する", edit_admin_genre_path(genre.id) %></td>
-    </tr>
+<div class="container mx-auto" style="height: 1500px;">
+  <h4 class="form-group row bg-light mb-4" style="width: 250px">ジャンル一覧・追加</h4>
+    <%= form_with model: @genre, url: admin_genres_path do |f| %>
+      <div class="form-group row">
+        <div class="col-2">
+        ジャンル名
+        </div>
+        <div class="col-3">
+        <%= f.text_field :name %>
+      　</div>
+        <div class="col-3">
+         <%= f.submit '新規投稿',class:"btn btn-success" %>
+        </div>
+      </div>
     <% end %>
-   </tbody>
-  </table>
 
-</body>
+    <table class="table" style="width: 350px">
+      <thead>
+        <tr class="table-light">
+          <th scope="col">ジャンル</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+       <% @genres.each do |genre| %>
+        <tr>
+          <td><%= genre.name %></td>
+          <td><%= link_to "編集する",edit_admin_genre_path(genre.id),class:"btn btn-success" %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+</div>
