--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,33 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
+<div class="container mx-auto" style="width: 1200px; height: 1200px;">
+  <h4 class="form-group row bg-light" style="width: 150px">注文履歴一覧</h4>
+    <table class="table">
+      <thead>
+        <tr class="table-light">
+          <th scope="col">購入日時</th>
+          <th scope="col">購入者</th>
+          <th scope="col">注文個数</th>
+          <th scope="col">注文ステータス</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @orders.each do |order| %>
+        <tr>
+          <td>
+          <%= link_to admin_order_path(order.id) do %>
+          <%= order.created_at.strftime("%Y/%m/%d %H:%M:%S") %>
+          <% end %>
+          </td>
+          <td><%= order.name%></td>
+          <% sum = 0%>
+          <% order.order_details.each do |detail|%>
+          <% sum += detail.amount %>
+          <% end %>
+　        <td><%= sum %></td>
+          <td><%= order.status_i18n%>
+          </td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  <%= paginate @orders %>
+</div>
