--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,22 +1,71 @@
-<body>
-  <h1>商品編集</h1>
-  <%= form_with model: @item, url: admin_item_path(@item.id), method: :patch do |f| %>
-  
-    <h4>商品画像</h4>
-      <%= f.file_field :image,accept:"image/*" %>
-    <h4>商品名</h4>
-      <%= f.text_field :name %>
-    <h4>商品説明</h4>
-      <%= f.text_field :introduction %>
-    <h4>ジャンル</h4>
-      <%= f.collection_select :genre_id, Genre.all, :id, :name %>
-    <h4>税抜価格</h4>
-      <%= f.text_field :price %>
-    <h4>販売ステータス</h4>
-      <%= f.label :is_active, '販売中',value: 1 %>
-      <%= f.radio_button :is_active, '販売中',value: '1' %>
-      <%= f.label :is_active, '販売停止中',value: 0 %>
-      <%= f.radio_button :is_active, '販売停止中',value: '0' %>     
-    <%= f.submit '変更を保存' %>
-  <% end %>
-</body>
+<div class="container mx-auto" style="width: 650px; height: 600px;">
+  <h4 class="form-group row bg-light" style="width: 100px">商品編集</h4>
+    <div>
+        <%= form_with model: @item, url: admin_item_path(@item.id), method: :patch do |f| %>
+
+        <div class="row mb-3">
+          <div class="col-4">
+          商品画像
+          </div>
+          <div class="col-8">
+          <%= f.file_field :image,accept:"image/*" %>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-4">
+          商品名
+          </div>
+          <div class="col-6">
+          <%= f.text_field :name,size:35 %>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-4">
+          商品説明
+          </div>
+          <div class="col-8 ">
+          <%= f.text_field :introduction, size:35  %>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-4">
+          ジャンル
+          </div>
+          <div class="col-8">
+          <%= f.collection_select :genre_id, Genre.all, :id, :name,size:40 %>
+          </div>
+        </div>
+
+        <div class="row" mb-3>
+          <div class="col-4">
+          税抜価格
+          </div>
+          <div class="col-8">
+          <%= f.text_field :price, size:35 %>円
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-4">
+          販売ステータス
+          </div>
+          <div class="col-8">
+          <%= f.label :is_active, '販売中',value: 1 %>
+          <%= f.radio_button :is_active, 'true',value: 'true' %>
+          <%= f.label :is_active, '販売停止中',value: 0 %>
+          <%= f.radio_button :is_active, 'false',value: 'false' %>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <div class="col-lg-4 mx-auto" style="width: 900px">
+          <%= f.submit "変更を保存",class:"btn btn-success" %>
+          </div>
+        </div>
+      <% end %>
+
+  </div>
+</div>
