--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,22 +1,61 @@
-<body>
-  <h1>商品新規登録</h1>
-  <%= form_with model: @item, url: admin_items_path do |f| %>
-  
-    <h4>商品画像</h4>
-      <%= f.file_field :image,accept:"image/*" %>
-    <h4>商品名</h4>
-      <%= f.text_field :name %>
-    <h4>商品説明</h4>
-      <%= f.text_field :introduction %>
-    <h4>ジャンル</h4>
-      <%= f.collection_select :genre_id, Genre.all, :id, :name %>
-    <h4>税抜価格</h4>
-      <%= f.text_field :price %>
-    <h4>販売ステータス</h4>
-      <%= f.label :is_active, '販売中',value: 1 %>
-      <%= f.radio_button :is_active, '販売中',value: '1' %>
-      <%= f.label :is_active, '販売停止中',value: 0 %>
-      <%= f.radio_button :is_active, '販売停止中',value: '0' %>      
-    <%= f.submit '新規登録' %>
-  <% end %>
-</body>
+<div class="container mx-auto m-5" style="width: 450px; height: 600px;">
+    <h4 class="form-group row bg-light" style="width: 150px">商品新規登録</h4>
+      <%= form_with model: @item, url: admin_items_path do |f| %>
+        <div class="form-group row">
+          <div class="col-lg-4 col-form-label">
+          商品画像
+          </div>
+          <div class="col-lg-8 col-form-label">
+          <%= f.file_field :image,accept:"image/*" %>
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="col-lg-4 col-form-label">
+          商品名
+          </div>
+          <div class="col-lg-6 col-form-label">
+          <%= f.text_field :name %>
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="col-lg-4 col-form-label">
+          商品説明
+          </div>
+          <div class="col-lg-8 col-form-label">
+          <%= f.text_field :introduction %>
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="col-lg-4 col-form-label">
+          ジャンル
+          </div>
+          <div class="col-lg-8 col-form-label">
+          <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="col-lg-4 col-form-label">
+          税抜価格
+          </div>
+          <div class="col-lg-4 col-form-label">
+          <%= f.text_field :price %>
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="col-lg-4 col-form-label">
+          販売ステータス
+          </div>
+          <div class="col-lg-8 col-form-label">
+          <%= f.label :is_active, '販売中',value: 1 %>
+          <%= f.radio_button :is_active, 'true',value: 'true' %>
+          <%= f.label :is_active, '販売停止中',value: 0 %>
+          <%= f.radio_button :is_active, 'false',value: 'false' %>
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="col-lg-4 mx-auto" style="width: 900px">
+          <%= f.submit "新規登録",class:"btn btn-success" %>
+          </div>
+        </div>
+      <% end %>
+</div>
