--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,16 +1,59 @@
-<body>
-  <h1>注文履歴詳細</h1>
-    
-    <p>購入者:<%= @order.customer.last_name %><%= @order.customer.first_name %></p>
-    <p>注文日:<%= @order.created_at.strftime('%Y/%m/%d') %></p>
-    <p>配送先:<%= @order.address %></br>
-    <%= @order.last_name %> <%= @order.first_name %>
-    </p>
-    <p>支払方法:<%= @orer.payment_method %></p>
-    <p>注文ステータス:<%= @order.status %></p>
-  
-   <table>
-        <thead>
+<div class="container mx-auto" style="width: 900px; height: 600px;">
+  <h4 class="form-group row bg-light" style="width: 150px">注文履歴詳細</h4>
+
+        <div class="row mb-3">
+          <div class="col-3">
+          購入者
+          </div>
+          <div class="col-5">
+          <%= @order.customer.last_name %><%= @order.customer.first_name %>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-3">
+          注文日
+          </div>
+          <div class="col-5">
+          <%= @order.created_at.strftime('%Y/%m/%d') %>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-3">
+          配送先
+          </div>
+          <div class="col-5">
+          <%= @order.postal_code %><%= @order.address %></br>
+          <%= @order.name %>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-3">
+          支払方法
+          </div>
+          <div class="col-5">
+          <%= @order.payment_method %>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-3">
+          注文ステータス
+          </div>
+          <div class="col-5">
+          <%= form_with model: @order, url: admin_order_path(@order.id), method: :patch do |f| %>
+          <%= f.select :status, Order.statuses_i18n.keys.map{|k| [I18n.t("enums.order.status.#{k}"), k]} %>
+          <%= f.submit "更新",class:"btn btn-success" %>
+          <% end %>
+          </div>
+        </div>
+
+  <div class="row mb-5">
+    <div class="col-8">
+      <table class="table table-borderless">
+      　<thead class="thead-light">
           <tr>
             <th>商品名</th>
             <th>単価（税込）</th>
@@ -18,20 +61,38 @@
             <th>小計</th>
             <th>製作ステータス</th>
             <th></th>
-            <th colspan="6"></th>
           </tr>
         </thead>
         <tbody>
-          <% @orders.each do |order| %>
+          <% @order.order_details.each do |order_detail| %>
           <tr>
-            <td><%= @order.item.name %></td>
-            <td><%= @order.item.price %></td>
-            <td><%= @order.amount %></td>
-            <td><%= customer.is_active %></td>            
-            <td><%= @order.making_status %></td>
-            <td><%= link_to "更新" ,admin_order_path(@oroder.id) %></td>
-            </tr>
+            <td><%= order_detail.item.name %></td>
+            <td><%= order_detail.item.price %></td>
+            <td><%= order_detail.amount %></td>
+            <td><%= (order_detail.item.price)*(order_detail.amount) %></td>
+            <td><%= form_with model: order_detail, url: admin_order_detail_path(order_detail.id), method: :patch do |f| %>
+            <%= f.select :making_status, OrderDetail.making_statuses_i18n.keys.map{|k| [I18n.t("enums.order_detail.making_status.#{k}"), k]} %></td>
+            <td><%= f.submit "更新",class:"btn btn-success" %></td>
+            <% end %>
+          </tr>
           <% end %>
-      </tbody>
-    </table>  
-</body>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="col-4">
+      <table class="table table-borderless">
+      　<thead>
+        　<tr>
+          　<th scope="col">商品合計</th><td><%= @order.total_payment %>円</td>
+          </tr>
+          <tr>
+          　<th scope="col">送料</th><td><%= @order.shipping_cost %>円</td>
+          </tr>
+          <tr>
+          　<th scope="col">請求金額合計</th><td><%= @order.total_payment %>円</td>
+          </tr>
+      　</thead>
+      </table>
+    </div>
+</div>
