--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,118 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="d-flex flex-column vh-100">
+    <header class="shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand p-3" href="/">
+            <span>NaganoCake</span>
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                  aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+
+              <% if customer_signed_in? %>
+              <li class="nav-link text-white">
+                ようこそ<%= current_customer.last_name %>
+                さん！
+              </li>
+              <li class="nav-item">
+                <%= link_to customer_path(current_customer.id),class:"nav-link text-light" do %>
+                マイページ
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to items_path,class:"nav-link text-light" do %>
+                商品一覧
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to cart_items_path,class:"nav-link text-light" do %>
+                カート
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to destroy_customer_session_path, method: :delete,class:"nav-link text-light" do %>
+                ログアウト
+                <% end %>
+              </li>
+
+              <% elsif admin_signed_in? %>
+              <li class="nav-item">
+                <%= link_to admin_items_path,class:"nav-link text-light" do %>
+                商品一覧
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to admin_customers_path,class:"nav-link text-light" do %>
+                会員一覧
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to admin_root_path,class:"nav-link text-light" do %>
+                注文履歴一覧
+                <% end %>
+              </li>
+               <li class="nav-item">
+                <%= link_to admin_genres_path,class:"nav-link text-light" do %>
+                ジャンル一覧
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to destroy_admin_session_path, method: :delete,class:"nav-link text-light" do %>
+                ログアウト
+                <% end %>
+              </li>
+
+              <% else %>
+              <li class="nav-item">
+                <%= link_to about_path,class:"nav-link text-light" do %>
+                About
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to items_path,class:"nav-link text-light" do %>
+                商品一覧
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to new_customer_registration_path,class:"nav-link text-light" do %>
+                新規登録
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to new_customer_session_path,class:"nav-link text-light" do %>
+                ログイン
+                <% end %>
+              </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main>
     <%= yield %>
+    </main>
+
+     <footer class="bg-light text-black pt-5 pb-4">
+      <div class="container mt-5">
+        <div class="row">
+          <div class="mx-auto">
+            <p>CopyRight Infratop.Inc</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
