--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,2 +1,45 @@
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
+<div class="container" style="width: 900px;">
+    <div class="form-group row">
+      <table class="table table-borderless border m-3" style="width: 350px">
+        <thead class="thead-white border">
+          <tr class="table-light">
+            <th scope="col">ジャンル検索</th>
+          </tr>
+        </thead>
+        <tbody>
+         <% @genres.each do |genre| %>
+          <tr>
+            <td><%= genre.name %></td>
+          </tr>
+         <% end %>
+        </tbody>
+      </table>
+
+        <div class="top">
+        ようこそ、ながのCAKEへ！</br>
+        このサイトは、ケーキ販売のECサイトになります。</br>
+        会員でない方も商品の閲覧はできますが、</br>
+        購入には会員登録が必要になります。
+        </div>
+    </div>
+
+    <h4 class="row" style="width: 100px">新着商品</h4>
+      <div class="row">
+        <% @items.each do |item| %>
+       <div class="col-3">
+        <%= link_to item_path(item.id) do %>
+        <% if item.image.attached? %>
+        <%= image_tag item.image, size: "200x150" %>
+        <% else %>
+        <%= image_tag 'no_image', size: "200x150" %>
+        <% end %>
+        <% end %>
+        <p><%= item.name %></p>
+        <p>¥<%= item.with_tax_price %></p>
+       </div>
+      <% end %>
+    </div>
+    <div class="text-right">
+    <%= link_to "全ての商品を見る＞" ,items_path %>
+    </div>
+</div>
