--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,92 @@
-<h2>Sign up</h2>
+<div class="container mx-auto mt-4" style="width: 800px; height: 600px;">
+  <h4 class="row bg-light" style="width: 150px">新規会員登録</h4>
+    <%= form_with model:@customer,url:customer_registration_path do |f| %>
+    <%= render "public/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
+      <div class="form-group row">
+        <div class="registration-name">
+        名前
+        </div>
+        <div class="registration-name-sei">
+      　(姓)<%= f.text_field :last_name %>
+        </div>
+        <div class>
+      　(名)<%= f.text_field :first_name %>
+        </div>
+      </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+      <div class="form-group row">
+        <div class="registration-name-kana">
+        フリガナ
+        </div>
+        <div class>
+      　(セイ)<%= f.text_field :last_name_kana %>
+        </div>
+        <div class>
+      　(メイ)<%= f.text_field :first_name_kana %>
+        </div>
+      </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+      <div class="form-group row">
+        <div class="registration">
+        メールアドレス
+        </div>
+        <div class>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      　</div>
+      </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+      <div class="form-group row">
+        <div class="registration">
+        郵便番号(ハイフンなし)
+        </div>
+        <div class>
+        <%= f.text_field :postal_code %>
+        </div>
+      </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+      <div class="form-group row">
+        <div class="registration">
+        住所
+        </div>
+        <div class>
+        <%= f.text_field :address,size:49 %>
+        </div>
+      </div>
 
-<%= render "public/shared/links" %>
+      <div class="form-group row">
+        <div class="registration">
+        電話番号(ハイフンなし)
+        </div>
+        <div class>
+        <%= f.text_field :telephone_number %>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <div class="registration">
+        <div class="field">
+        <%= f.label :password %>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        </div>
+        </div>
+
+        <div class>
+        <%= f.password_field :password, autocomplete: "new-password" %>
+        </div>
+      </div>
+
+      <div class="form-group row">
+       <div class="submit">
+       <%= f.submit "新規登録",class:"btn btn-success" %>
+      </div>
+      </div>
+    <% end %>
+
+    <h6 class= "row bg-light" style="width: 150px">既に登録済みの方</h6>
+      <div class="row">
+        <%= link_to "こちら", customer_session_path %>からログインしてください。
+      </div>
+</div>
